inception-of-things/p2/confs/app2.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 8080

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080
